--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -388,7 +388,7 @@ filtering the rows. A logical statement evaluates to either `TRUE` or `FALSE`;
 `filter` keeps only those rows for which the logical statement evaluates to `TRUE`.
 For example, in our analysis, we are interested in keeping only languages in the
 "Aboriginal languages" higher-level category. We can use
-the *equivalency operator* `==` \index{logical statement!equivalency operator} to compare the values
+the *equivalency operator* `==` \index{logical operator!equivalency} to compare the values
 of the `category` column with the value `"Aboriginal languages"`; you will learn about
 many other kinds of logical statements in Chapter \@ref(wrangling).  Similar to
 when we loaded the data file and put quotes around the file name, here we need
