--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -78,7 +78,7 @@ into R, but before we can talk about *how* we read the data into R with these
 functions, we first need to talk about *where* the data lives. When you load a
 data set into R, you first need to tell R where those files live. The file
 could live on your  computer (*local*)
-\index{location|see{path}} \index{path!local, remote, relative, absolute}
+\index{location|see{path}} \index{path!local}\index{path!remote}\index{path!relative}\index{path!absolute}
 or somewhere on the internet (*remote*).
 
 The place where the file lives on your computer is referred to as its "path". You can
