--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -303,8 +303,8 @@ Note that for the remainder of the chapter
 we'll be working with the entire Sacramento data set,
 as opposed to the smaller sample of 30 points
 that we used earlier in the chapter (Figure \@ref(fig:07-small-eda-regr)).
-\index{training data}
-\index{test data}
+\index{training set}
+\index{test set}
 
 ```{r 07-sacramento-seed-before-train-test-split, echo = FALSE, message = FALSE, warning = FALSE}
 # hidden seed -- make sure this is the same as what appears in reg2 right before train/test split
