--- a/source/version-control.Rmd
+++ b/source/version-control.Rmd
@@ -204,7 +204,7 @@ Once you reach a point that you want Git to keep a record
 of the current version of your work, you need to **commit** \index{git!commit}
 (i.e., snapshot) your changes. A prerequisite to this is telling Git which
 files should be included in that snapshot. We call this step **adding** the
-files to the **staging area**. \index{git!add, staging area}\index{staging area|see{git}}
+files to the **staging area**. \index{git!add}\index{git!staging area}\index{staging area|see{git}}
 Note that the staging area is not a real physical location on your computer;
 it is instead a conceptual placeholder for these files until they are committed.
 The benefit of the Git version control system using a staging area is that you
