--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -356,7 +356,7 @@ visual noise to remove. But there are a few things we must do to improve
 clarity, such as adding informative axis labels and making the font a more
 readable size.  To add axis labels, we use the `xlab` and `ylab` functions. To
 change the font size, we use the `theme` function with the `text` argument:
-\index{ggplot!xlab,ylab}
+\index{ggplot!xlab}\index{ggplot!ylab}
 \index{ggplot!theme}
 
 ```{r 03-data-co2-line-2, warning=FALSE, message=FALSE, fig.height = 3.1, fig.width = 4.5, fig.align = "center",  fig.cap = "Line plot of atmospheric concentration of CO$_{2}$ over time with clearer axes and labels."}
@@ -675,11 +675,11 @@ to assess a few key characteristics of the data:
 
 - **Direction:** if the y variable tends to increase when the x variable increases, then y has a **positive** relationship with x. If
   y tends to decrease when x increases, then y has a **negative** relationship with x. If y does not meaningfully increase or decrease
-  as x increases, then y has **little or no** relationship with x. \index{relationship!positive, negative, none}
+  as x increases, then y has **little or no** relationship with x. \index{relationship!positive}\index{relationship!negative}\index{relationship!none}
 - **Strength:** if the y variable *reliably* increases, decreases, or stays flat as x increases,
-  then the relationship is **strong**. Otherwise, the relationship is **weak**. Intuitively, \index{relationship!strong, weak}
+  then the relationship is **strong**. Otherwise, the relationship is **weak**. Intuitively, \index{relationship!strong}\index{relationship!weak}
   the relationship is strong when the scatter points are close together and look more like a "line" or "curve" than a "cloud."
-- **Shape:** if you can draw a straight line roughly through the data points, the relationship is **linear**. Otherwise, it is **nonlinear**. \index{relationship!linear, nonlinear}
+- **Shape:** if you can draw a straight line roughly through the data points, the relationship is **linear**. Otherwise, it is **nonlinear**. \index{relationship!linear}\index{relationship!nonlinear}
 
 In Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props), we see that
 as the percentage of people who have a language as their mother tongue increases,
