use default colors in inference

--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -292,7 +292,7 @@ sampling distribution directly for learning purposes.
 
 ```{r 11-example-proportions7, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Sampling distribution of the sample proportion for sample size 40.", fig.height = 3.3, fig.width = 4.2}
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
+  geom_histogram(color = "lightgrey", bins = 12) +
   labs(x = "Sample proportions", y = "Count") +
   theme(text = element_text(size = 12))
 
@@ -340,7 +340,7 @@ options(pillar.sigfig = 5)
 
 ```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Population distribution of price per night (dollars) for all Airbnb listings in Vancouver, Canada.", fig.height = 3.5, fig.width = 4.5}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
@@ -385,7 +385,7 @@ of our sample.\index{ggplot!geom\_histogram}
 
 ```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Distribution of price per night (dollars) for sample of 40 Airbnb listings.", fig.height = 3.5, fig.width = 4.5}
 sample_distribution <- ggplot(one_sample, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
@@ -433,7 +433,7 @@ sample_estimates <- samples |>
 sample_estimates
 
 sampling_distribution_40 <- ggplot(sample_estimates, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Sample mean price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
@@ -513,13 +513,13 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) |>
 
 ## Sampling distribution n = 20
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Sample mean price per night (dollars)", y = "Count") +
   ggtitle("n = 20")
 
 ## Sampling distribution n = 50
 sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   ylab("Count") +
   xlab("Sample mean price per night (dollars)") +
   ggtitle("n = 50") +
@@ -527,7 +527,7 @@ sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = mean_price)) +
 
 ## Sampling distribution n = 100
 sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   ylab("Count") +
   xlab("Sample mean price per night (dollars)") +
   ggtitle("n = 100") +
@@ -535,7 +535,7 @@ sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = mean_price)) +
 
 ## Sampling distribution n = 500
 sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   ylab("Count") +
   xlab("Sample mean price per night (dollars)") +
   ggtitle("n = 500") +
@@ -671,7 +671,7 @@ large enough sample.
 sample_10 <- airbnb |>
   rep_sample_n(10)
 sample_distribution_10 <- ggplot(sample_10, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   xlab("Price per night (dollars)") +
   ylab("Count") +
   ggtitle("n = 10")
@@ -680,7 +680,7 @@ sample_20 <- airbnb |>
   rep_sample_n(20)
 
 sample_distribution_20 <- ggplot(sample_20, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   xlab("Price per night (dollars)") +
   ylab("Count") +
   ggtitle("n = 20")
@@ -689,7 +689,7 @@ sample_50 <- airbnb |>
   rep_sample_n(50)
 
 sample_distribution_50 <- ggplot(sample_50, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   xlab("Price per night (dollars)") +
   ylab("Count") +
   ggtitle("n = 50")
@@ -698,7 +698,7 @@ sample_100 <- airbnb |>
   rep_sample_n(100)
 
 sample_distribution_100 <- ggplot(sample_100, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   xlab("Price per night (dollars)") +
   ylab("Count") +
   ggtitle("n = 100")
@@ -707,7 +707,7 @@ sample_200 <- airbnb |>
   rep_sample_n(200)
 
 sample_distribution_200 <- ggplot(sample_200, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   xlab("Price per night (dollars)") +
   ylab("Count") +
   ggtitle("n = 200")
@@ -783,7 +783,7 @@ one_sample <- one_sample |>
 one_sample
 
 one_sample_dist <- ggplot(one_sample, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
@@ -809,7 +809,7 @@ we change the argument for `replace` from its default value of `FALSE` to `TRUE`
 boot1 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
 boot1_dist <- ggplot(boot1, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Price per night (dollars)", y =  "Count") +
   theme(text = element_text(size = 12))
 
@@ -849,7 +849,7 @@ six_bootstrap_samples <- boot20000 |>
   filter(replicate <= 6)
 
 ggplot(six_bootstrap_samples, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Price per night (dollars)", y = "Count") +
   facet_wrap(~replicate) +
   theme(text = element_text(size = 12))
@@ -880,7 +880,7 @@ boot20000_means
 tail(boot20000_means)
 
 boot_est_dist <- ggplot(boot20000_means, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   labs(x = "Sample mean price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
@@ -898,7 +898,7 @@ sample_estimates <- samples |>
   summarize(mean_price = mean(price))
 
 sampling_dist <- ggplot(sample_estimates, aes(x = mean_price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   ylab("Count") +
   xlab("Sample mean price per night (dollars)")
 
@@ -988,7 +988,7 @@ boot1_dist <- boot1_dist + ggtitle("Samples with Replacement") +
   )
 
 boot2_dist <- ggplot(boot2, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   theme(
     axis.title.x = element_blank(),
     axis.ticks.x = element_blank(),
@@ -999,7 +999,7 @@ boot2_dist <- ggplot(boot2, aes(price)) +
   )
 
 boot3_dist <- ggplot(boot3, aes(price)) +
-  geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
+  geom_histogram(color = "lightgrey") +
   xlab("") +
   theme(
     axis.ticks.x = element_blank(),
