consistent font label clustering elbow

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -894,7 +894,7 @@ p2 <- ggplot(clusterings, aes(x = k, y = tot.withinss)) +
                    xend = 3.1,
                    yend = 6),
                arrow = arrow(length = unit(0.2, "cm"))) +
-  annotate("text", x = 4.4, y = 19, label = "Elbow", size = 7, color = "blue") +
+  annotate("text", x = 4.4, y = 19, label = "Elbow", size = 5) +
   labs(x = "Number of Clusters", y = "Total WSSD") +
   #theme(text = element_text(size = 20)) +
   scale_x_continuous(breaks = 1:9)
