consistent cluster centre style in clustering

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -308,7 +308,7 @@ In the first cluster from the example, there are `r nrow(clus1)` data points. Th
 (standardized flipper length `r round(mean(clus1$flipper_length_standardized),2)`, standardized bill length `r round(mean(clus1$bill_length_standardized),2)`) highlighted
 in Figure \@ref(fig:10-toy-example-clus1-center).
 
-(ref:10-toy-example-clus1-center) Cluster 1 from the `penguins_standardized` data set example. Observations are in blue, with the cluster center highlighted in red.
+(ref:10-toy-example-clus1-center) Cluster 1 from the `penguins_standardized` data set example. Observations are small blue points, with the cluster center highlighted as a large blue point with a black outline.
 
 ```{r 10-toy-example-clus1-center, echo = FALSE, warning = FALSE, fig.height = 3.25, fig.width = 3.5, fig.align = "center", fig.cap = "(ref:10-toy-example-clus1-center)"}
 base <- ggplot(penguins_clustered, aes(x = flipper_length_standardized, y = bill_length_standardized)) +
@@ -334,8 +334,11 @@ base <- ggplot(clus1) +
   )) +
   geom_point(aes(y = mean(bill_length_standardized),
                  x = mean(flipper_length_standardized)),
-             color = "#F8766D",
-             size = 5) +
+               size = 4,
+               shape = 21,
+               stroke = 1,
+               color = "black",
+               fill = "dodgerblue3")+
   theme(legend.position = "none")
 
 base
@@ -354,7 +357,7 @@ S^2 = \left((x_1 - \mu_x)^2 + (y_1 - \mu_y)^2\right) + \left((x_2 - \mu_x)^2 + (
 
 These distances are denoted by lines in Figure \@ref(fig:10-toy-example-clus1-dists) for the first cluster of the penguin data example.
 
-(ref:10-toy-example-clus1-dists) Cluster 1 from the `penguins_standardized` data set example. Observations are in blue, with the cluster center highlighted in red. The distances from the observations to the cluster center are represented as black lines.
+(ref:10-toy-example-clus1-dists) Cluster 1 from the `penguins_standardized` data set example. Observations are small blue points, with the cluster center highlighted as a large blue point with a black outline. The distances from the observations to the cluster center are represented as black lines.
 
 ```{r 10-toy-example-clus1-dists, echo = FALSE, warning = FALSE, fig.height = 3.25, fig.width = 3.5, fig.align = "center", fig.cap = "(ref:10-toy-example-clus1-dists)"}
 base <- ggplot(clus1)
@@ -373,8 +376,11 @@ for (i in 1:nrow(clus1)) {
 base <- base +
   geom_point(aes(y = mean(bill_length_standardized),
                  x = mean(flipper_length_standardized)),
-             color = "#F8766D",
-             size = 5)
+               size = 4,
+               shape = 21,
+               stroke = 1,
+               color = "black",
+               fill = "dodgerblue3")
 
 base <- base +
   geom_point(aes(y = bill_length_standardized,
@@ -397,7 +403,7 @@ this means adding up all the squared distances for the 18 observations.
 These distances are denoted by black lines in
 Figure \@ref(fig:10-toy-example-all-clus-dists).
 
-(ref:10-toy-example-all-clus-dists) All clusters from the `penguins_standardized` data set example. Observations are in orange, blue, and yellow with the cluster center highlighted in red. The distances from the observations to each of the respective cluster centers are represented as black lines.
+(ref:10-toy-example-all-clus-dists) All clusters from the `penguins_standardized` data set example. Observations are small orange, blue, and yellow points with cluster centers denoted by larger points with a black outline. The distances from the observations to each of the respective cluster centers are represented as black lines.
 
 ```{r 10-toy-example-all-clus-dists, echo = FALSE, warning = FALSE, fig.height = 3.25, fig.width = 4.25, fig.align = "center", fig.cap = "(ref:10-toy-example-all-clus-dists)"}
 all_clusters_base <- ggplot(penguins_clustered)
@@ -441,13 +447,13 @@ all_clusters_base <- all_clusters_base +
 all_clusters_base <- all_clusters_base +
   geom_point(aes(y = cluster_centers$y[1],
                  x = cluster_centers$x[1]),
-             color = "#F8766D", size = 3) +
+             color = "black", fill = "darkorange3", size = 4, stroke = 1, shape = 21) +
   geom_point(aes(y = cluster_centers$y[2],
                  x = cluster_centers$x[2]),
-             color = "#F8766D", size = 3) +
+             color = "black", fill = "dodgerblue3", size = 4, stroke = 1, shape = 21) +
   geom_point(aes(y = cluster_centers$y[3],
                  x = cluster_centers$x[3]),
-             color = "#F8766D", size = 3)
+             color = "black", fill = "goldenrod1", size = 4, stroke = 1, shape = 21)
 
 all_clusters_base
 ```
