--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -95,7 +95,7 @@ labels for new observations without known class labels.
 > when predicting whether a patient's tumor is malignant or benign!
 
 ```{r 06-training-test, echo = FALSE, warning = FALSE, fig.cap = "Splitting the data into training and testing sets.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/classification2/training_test.jpeg")
+knitr::include_graphics("img/classification2/training_test.png")
 ```
 
 How exactly can we assess how well our predictions match the actual labels for
@@ -1257,7 +1257,7 @@ model we can use the test set to estimate its accuracy.
 The overall process is summarized in Figure \@ref(fig:06-overview).
 
 ```{r 06-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Overview of K-NN classification.", fig.retina = 2, out.width = "100%"}
-knitr::include_graphics("img/classification2/train-test-overview.jpeg")
+knitr::include_graphics("img/classification2/train-test-overview.png")
 ```
 
 The overall workflow for performing K-nearest neighbors classification using `tidymodels` is as follows:
