orange2 -> darkorange; steelblue2 -> steelblue

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -239,8 +239,8 @@ cancer |>
 
 Next, let's draw a scatter plot \index{visualization!scatter} to visualize the relationship between the
 perimeter and concavity variables. Rather than use `ggplot's` default palette,
-we select our own colorblind-friendly colors&mdash;`"orange2"`
-for light orange and `"steelblue2"` for light blue&mdash;and
+we select our own colorblind-friendly colors&mdash;`"darkorange"`
+for orange and `"steelblue"` for blue&mdash;and
  pass them as the `values` argument to the `scale_color_manual` function.
 
 ```{r 05-scatter, fig.height = 3.5, fig.width = 4.5, fig.cap= "Scatter plot of concavity versus perimeter colored by diagnosis label."}
@@ -250,7 +250,7 @@ perim_concav <- cancer |>
   labs(x = "Perimeter (standardized)",
        y = "Concavity (standardized)",
        color = "Diagnosis") +
-  scale_color_manual(values = c("orange2", "steelblue2")) +
+  scale_color_manual(values = c("darkorange", "steelblue")) +
   theme(text = element_text(size = 12))
 perim_concav
 ```
@@ -334,7 +334,7 @@ perim_concav_with_new_point <-  bind_rows(cancer,
   labs(color = "Diagnosis", x = "Perimeter (standardized)",
        y = "Concavity (standardized)") +
   scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18))+
   scale_size_manual(name = "Diagnosis",
@@ -389,7 +389,7 @@ perim_concav_with_new_point2 <- bind_rows(cancer,
        x = "Perimeter (standardized)",
        y = "Concavity (standardized)") +
  scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18))+
   scale_size_manual(name = "Diagnosis",
@@ -484,7 +484,7 @@ perim_concav <- bind_rows(cancer,
                      breaks = seq(-2, 4, 1)) +
   labs(color = "Diagnosis") +
   scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18))+
   scale_size_manual(name = "Diagnosis",
@@ -628,7 +628,7 @@ plot_3d <- scaled_cancer_3 |>
             color = ~Class,
             opacity = 0.4,
             size = 2,
-            colors = c("steelblue2", "orange2", "red"),
+            colors = c("steelblue", "darkorange", "red"),
             symbol = ~Class, symbols = c('circle','circle','diamond'))
 
 x1 <- c(pull(new_obs_3[1]), data$Perimeter[1])
@@ -653,15 +653,15 @@ z5 <- c(pull(new_obs_3[3]), data$Symmetry[5])
 
 plot_3d <- plot_3d  |>
   add_trace(x = x1, y = y1, z = z1, type = "scatter3d", mode = "lines",
-            name = "lines", showlegend = FALSE, color = I("orange2")) |>
+            name = "lines", showlegend = FALSE, color = I("darkorange")) |>
   add_trace(x = x2, y = y2, z = z2, type = "scatter3d", mode = "lines",
-            name = "lines", showlegend = FALSE, color =  I("orange2")) |>
+            name = "lines", showlegend = FALSE, color =  I("darkorange")) |>
   add_trace(x = x3, y = y3, z = z3, type = "scatter3d", mode = "lines",
-            name = "lines", showlegend = FALSE, color =  I("orange2")) |>
+            name = "lines", showlegend = FALSE, color =  I("darkorange")) |>
   add_trace(x = x4, y = y4, z = z4, type = "scatter3d", mode = "lines",
-            name = "lines", showlegend = FALSE, color =  I("steelblue2")) |>
+            name = "lines", showlegend = FALSE, color =  I("steelblue")) |>
   add_trace(x = x5, y = y5, z = z5, type = "scatter3d", mode = "lines",
-            name = "lines", showlegend = FALSE, color =  I("orange2"))
+            name = "lines", showlegend = FALSE, color =  I("darkorange"))
 
 if(!is_latex_output()){
   plot_3d
@@ -966,7 +966,7 @@ unscaled <- ggplot(unscaled_cancer, aes(x = Area,
                                         shape = Class, size = Class)) +
   geom_point(alpha = 0.6) +
   scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18)) +
     scale_size_manual(name = "Diagnosis",
@@ -1006,7 +1006,7 @@ scaled <- ggplot(scaled_cancer, aes(x = Area,
                                     size = Class)) +
   geom_point(alpha = 0.6) +
   scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18)) +
   scale_size_manual(name = "Diagnosis",
@@ -1043,7 +1043,7 @@ ggplot(unscaled_cancer, aes(x = Area,
                             shape = Class)) +
   geom_point(size = 2.5, alpha = 0.6) +
   scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18)) +
     scale_size_manual(name = "Diagnosis",
@@ -1115,7 +1115,7 @@ rare_plot <- rare_cancer |>
   labs(x = "Perimeter (standardized)",
        y = "Concavity (standardized)",
        color = "Diagnosis") +
-  scale_color_manual(values = c("orange2", "steelblue2")) +
+  scale_color_manual(values = c("darkorange", "steelblue")) +
   theme(text = element_text(size = 12))
 
 rare_plot
@@ -1148,16 +1148,16 @@ rare_plot <- bind_rows(rare_cancer,
        x = "Perimeter (standardized)",
        y = "Concavity (standardized)") +
   scale_color_manual(name = "Diagnosis",
-                     values = c("steelblue2", "orange2", "red")) +
+                     values = c("steelblue", "darkorange", "red")) +
   scale_shape_manual(name = "Diagnosis",
                      values= c(16, 16, 18))+
   scale_size_manual(name = "Diagnosis",
                      values= c(2, 2, 2.5))
 
 for (i in 1:7) {
-  clr <- "steelblue2"
+  clr <- "steelblue"
   if (neighbors$Class[i] == "Malignant") {
-    clr <- "orange2"
+    clr <- "darkorange"
   }
   rare_plot <- rare_plot +
     geom_segment(
@@ -1217,7 +1217,7 @@ rare_plot <-
   labs(color = "Diagnosis",
        x = "Perimeter (standardized)",
        y = "Concavity (standardized)") +
-  scale_color_manual(values = c("orange2", "steelblue2"))
+  scale_color_manual(values = c("darkorange", "steelblue"))
 
 rare_plot
 ```
@@ -1288,7 +1288,7 @@ upsampled_plot <-
   labs(color = "Diagnosis",
        x = "Perimeter (standardized)",
        y = "Concavity (standardized)") +
-  scale_color_manual(values = c("orange2", "steelblue2"))
+  scale_color_manual(values = c("darkorange", "steelblue"))
 
 upsampled_plot
 ```
@@ -1492,7 +1492,7 @@ wkflw_plot <-
   labs(color = "Diagnosis",
        x = "Area",
        y = "Smoothness") +
-  scale_color_manual(values = c("orange2", "steelblue2")) +
+  scale_color_manual(values = c("darkorange", "steelblue")) +
   theme(text = element_text(size = 12))
 
 wkflw_plot
