--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -343,7 +343,7 @@ perim_concav <- cancer |>
   ggplot(aes(x = Smoothness, y = Concavity, color = Class)) +
   geom_point(alpha = 0.5) +
   labs(color = "Diagnosis") +
-  scale_color_manual(values = c("orange2", "steelblue2")) +
+  scale_color_manual(values = c("darkorange", "steelblue")) +
   theme(text = element_text(size = 12))
 
 perim_concav
@@ -1137,7 +1137,7 @@ for (i in 1:length(ks)) {
                size = 5.) +
     labs(color = "Diagnosis") +
     ggtitle(paste("K = ", ks[[i]])) +
-    scale_color_manual(values = c("orange2", "steelblue2"))  +
+    scale_color_manual(values = c("darkorange", "steelblue"))  +
   theme(text = element_text(size = 18), axis.title=element_text(size=18))
   }
 
