landmass bar colors steelblue,darkorange

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -954,7 +954,9 @@ coloring the bars based on whether they correspond to a continent,
 and by organizing the bars by landmass size rather than by alphabetical order.
 The data for coloring the bars is stored in the `landmass_type` column,
 so we add the `fill` argument to the aesthetic mapping
-and set it to `landmass_type`.
+and set it to `landmass_type`. We manually select two colors for the bars
+using the `scale_fill_manual` function:`"darkorange"`
+for orange and `"steelblue"` for blue.
 To organize the landmasses by their `size` variable,
 we will use the `tidyverse` `fct_reorder` function
 in the aesthetic mapping to organize the landmasses by their `size` variable.
@@ -992,6 +994,7 @@ islands_bar <- ggplot(islands_top12,
   	   y = "Landmass",
   	   fill = "Type",
   	   title = "Earth's twelve largest landmasses") +
+  scale_fill_manual(values = c("steelblue", "darkorange")) +
   theme(text = element_text(size = 10))
 
 islands_bar
