dotted to dashed vert rule in reg1; thinner default dash in viz

--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -1072,10 +1072,7 @@ Here we set it to 792.458, which is the true value of light speed
 minus 299,000; this ensures it is coded the same way as the
 measurements in the `morley` data frame.
 We would also like to fine tune this vertical line,
-styling it so that it is dashed and 1 point in thickness.
-A point is a measurement unit commonly used with fonts,
-and 1 point is about 0.353 mm.
-We do this by setting `linetype = "dashed"` and `linewidth = 1`, respectively.
+styling it so that it is dashed by setting `linetype = "dashed"`.
 There is a similar function, `geom_hline`,
 that is used for plotting horizontal lines.
 Note that
@@ -1085,7 +1082,7 @@ while *horizontal lines* are used to denote quantities on the *vertical axis*.
 ```{r 03-data-morley-hist-2, warning=FALSE,  fig.height = 2.75, fig.width = 4.5, fig.align = "center", fig.pos = "H", out.extra="", message=FALSE,fig.cap = "Histogram of Michelson's speed of light data with vertical line indicating true speed of light."}
 morley_hist <- ggplot(morley, aes(x = Speed)) +
   geom_histogram() +
-  geom_vline(xintercept = 792.458, linetype = "dashed", linewidth = 1)
+  geom_vline(xintercept = 792.458, linetype = "dashed")
 
 morley_hist
 ```
@@ -1114,7 +1111,7 @@ when they are colored by another categorical variable).
 ```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE,  fig.height = 2.75, fig.width = 4.5, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Histogram of Michelson's speed of light data where an attempt is made to color the bars by experiment."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
   geom_histogram(alpha = 0.5, position = "identity") +
-  geom_vline(xintercept = 792.458, linetype = "dashed", linewidth = 1.0)
+  geom_vline(xintercept = 792.458, linetype = "dashed")
 
 morley_hist
 ```
@@ -1139,7 +1136,7 @@ and the color will be mapped discretely.
 ```{r 03-data-morley-hist-with-factor, warning=FALSE, message=FALSE,  fig.height = 2.75, fig.width = 5, fig.pos = "H", out.extra="", fig.align = "center", fig.cap = "Histogram of Michelson's speed of light data colored by experiment as factor."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
   geom_histogram(alpha = 0.5, position = "identity") +
-  geom_vline(xintercept = 792.458, linetype = "dashed", linewidth = 1.0)
+  geom_vline(xintercept = 792.458, linetype = "dashed")
 
 morley_hist
 ```
@@ -1178,7 +1175,7 @@ in the context of the data frame.
 morley_hist <- ggplot(morley, aes(x = Speed, fill = as_factor(Expt))) +
   geom_histogram() +
   facet_grid(rows = vars(Expt)) +
-  geom_vline(xintercept = 792.458, linetype = "dashed", linewidth = 1.0)
+  geom_vline(xintercept = 792.458, linetype = "dashed")
 
 morley_hist
 ```
@@ -1209,7 +1206,7 @@ morley_hist <- ggplot(morley_rel,
                           fill = as_factor(Expt))) +
   geom_histogram() +
   facet_grid(rows = vars(Expt)) +
-  geom_vline(xintercept = 0, linetype = "dashed", linewidth = 1.0) +
+  geom_vline(xintercept = 0, linetype = "dashed") +
   labs(x = "Relative Accuracy (%)",
        y = "# Measurements",
        fill = "Experiment ID") +
@@ -1263,7 +1260,7 @@ morley_hist_default <- ggplot(morley_rel,
                                   fill = as_factor(Expt))) +
   geom_histogram() +
   facet_grid(rows = vars(Expt)) +
-  geom_vline(xintercept = 0, linetype = "dashed", linewidth = 1.0) +
+  geom_vline(xintercept = 0, linetype = "dashed") +
   labs(x = "Relative Accuracy (%)",
        y = "# Measurements",
        fill = "Experiment ID") +
@@ -1276,7 +1273,7 @@ morley_hist_big <- ggplot(morley_rel,
                               fill = as_factor(Expt))) +
   geom_histogram(binwidth = 0.1) +
   facet_grid(rows = vars(Expt)) +
-  geom_vline(xintercept = 0, linetype = "dashed", linewidth = 1.0) +
+  geom_vline(xintercept = 0, linetype = "dashed") +
   labs(x = "Relative Accuracy (%)",
        y = "# Measurements",
        fill = "Experiment ID") +
@@ -1289,7 +1286,7 @@ morley_hist_med <- ggplot(morley_rel,
                               fill = as_factor(Expt))) +
   geom_histogram(binwidth = 0.01) +
   facet_grid(rows = vars(Expt)) +
-  geom_vline(xintercept = 0, linetype = "dashed", linewidth = 1.0) +
+  geom_vline(xintercept = 0, linetype = "dashed") +
   labs(x = "Relative Accuracy (%)",
        y = "# Measurements",
        fill = "Experiment ID") +
@@ -1302,7 +1299,7 @@ morley_hist_small <- ggplot(morley_rel,
                                 fill = as_factor(Expt))) +
   geom_histogram(binwidth = 0.001) +
   facet_grid(rows = vars(Expt)) +
-  geom_vline(xintercept = 0, linetype = "dashed", linewidth = 1.0) +
+  geom_vline(xintercept = 0, linetype = "dashed") +
   labs(x = "Relative Accuracy (%)",
        y = "# Measurements",
        fill = "Experiment ID") +
