--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -222,7 +222,7 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_vline(xintercept = 2000, linetype = "dotted") +
+  geom_vline(xintercept = 2000, linetype = "dashed") +
   theme(text = element_text(size = 12))
 
 small_plot
