--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -117,7 +117,7 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_smooth(method = "lm", se = FALSE)
+  geom_smooth(method = "lm", se = FALSE, color = "steelblue")
 
 small_plot
 ```
@@ -154,10 +154,9 @@ small_model <- lm(price ~ sqft, data = small_sacramento)
 prediction <- predict(small_model, data.frame(sqft = 2000))
 
 small_plot +
-  geom_vline(xintercept = 2000, linetype = "dotted") +
-  geom_point(aes(x = 2000,
-                 y = prediction[[1]],
-                 color = "red", size = 2.5)) +
+  geom_vline(xintercept = 2000, linetype = "dashed") +
+  geom_point(aes(x = 2000, y = prediction[[1]]),
+                 color = "red", size = 2.5) +
   annotate("text",
            x = 2350,
            y = prediction[[1]]-30000,
@@ -179,15 +178,15 @@ Some plausible examples are shown in Figure \@ref(fig:08-several-lines).
 
 ```{r 08-several-lines, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 3.5, fig.width = 4.5,  fig.cap = "Scatter plot of sale price versus size with many possible lines that could be drawn through the data points."}
 small_plot +
-  geom_abline(intercept = -64542.23, slope = 190, color = "green") +
-  geom_abline(intercept = -6900, slope = 175, color = "purple") +
-  geom_abline(intercept = -64542.23, slope = 160, color = "red")
+  geom_abline(intercept = -64542.23, slope = 190, color = "darkorange", linewidth = 1) +
+  geom_abline(intercept = -6900, slope = 175, color = "purple", linewidth = 1) +
+  geom_abline(intercept = -64542.23, slope = 160, color = "firebrick", linewidth = 1)
 ```
 
 Simple linear regression chooses the straight line of best fit by choosing
 the line that minimizes the **average squared vertical distance** between itself and
-each of the observed data points in the training data. Figure \@ref(fig:08-verticalDistToMin) illustrates
-these vertical distances as red lines. Finally, to assess the predictive
+each of the observed data points in the training data (equivalent to minimizing the RMSE).
+Figure \@ref(fig:08-verticalDistToMin) illustrates these vertical distances as red lines. Finally, to assess the predictive
 accuracy of a simple linear regression model,
 we use RMSPE&mdash;the same measure of predictive performance we used with K-NN regression.
 \index{RMSPE}
@@ -199,7 +198,7 @@ small_sacramento <- small_sacramento |>
 small_plot +
   geom_segment(data = small_sacramento,
                aes(xend = sqft, yend = predicted),
-               colour = "red")
+               colour = "black")
 ```
 
 ## Linear regression in R
@@ -317,7 +316,8 @@ lm_plot_final <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   geom_line(data = sacr_preds,
             mapping = aes(x = sqft, y = .pred),
-            color = "blue") +
+            color = "steelblue",
+            linewidth = 1) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
@@ -390,7 +390,7 @@ knn_plot_final <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
+  geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "steelblue", linewidth = 1) +
   ggtitle("K-NN regression") +
   annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", sacr_rmspe)) +
   theme(text = element_text(size = 18), axis.title=element_text(size=18))
@@ -663,7 +663,7 @@ lm_plot_outlier <- ggplot(sacramento_train_small, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_smooth(method = "lm", se = FALSE) +
+  geom_smooth(method = "lm", se = FALSE, color = "steelblue") +
   geom_smooth(data = sacramento_train_small |>
                 add_row(sqft = 5000, price = 50000),
               method = "lm", se = FALSE, color = "red")
@@ -693,7 +693,7 @@ lm_plot_outlier_large <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_smooth(method = "lm", se = FALSE) +
+  geom_smooth(method = "lm", se = FALSE, color = "steelblue") +
   geom_smooth(data = sacramento_train |>
                 add_row(sqft = 5000, price = 50000),
               method = "lm",
@@ -853,7 +853,7 @@ curve_plt <- ggplot(df, aes(x = x, y = y)) +
   geom_point() +
   xlab("x") +
   ylab("y") +
-  geom_smooth(method = "lm", se = FALSE)
+  geom_smooth(method = "lm", se = FALSE, color = "steelblue")
 curve_plt
 ```
 
@@ -880,7 +880,7 @@ curve_plt2 <- ggplot(df, aes(x = z, y = y)) +
   geom_point() +
   xlab(expression(paste("z = x"^"3"))) +
   ylab("y") +
-  geom_smooth(method = "lm", se = FALSE)
+  geom_smooth(method = "lm", se = FALSE, color = "steelblue")
 
 curve_plt2
 ```
