Steelblue, darkorange consistency with prev chps

--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -44,7 +44,7 @@ hidden_print_cli <- function(x){
 # set the colors in the graphs,
 # some graphs with the code shown to students are hard coded
 cbbPalette <- c(brewer.pal(9, "Paired"))
-cbpalette <- c("darkorange3", "dodgerblue3", "goldenrod1")
+cbpalette <- c("darkorange", "steelblue", "goldenrod1")
 
 theme_update(axis.title = element_text(size = 12)) # modify axis label size in plots
 ```
@@ -258,7 +258,7 @@ ggplot(penguins_clustered, aes(y = bill_length_standardized,
   geom_point() +
   xlab("Flipper Length (standardized)") +
   ylab("Bill Length (standardized)") +
-  scale_color_manual(values= c("darkorange3", "dodgerblue3", "goldenrod1"))
+  scale_color_manual(values= c("darkorange", "steelblue", "goldenrod1"))
 ```
 
 What are the labels for these groups? Unfortunately, we don't have any. K-means,
@@ -318,7 +318,7 @@ base <- ggplot(penguins_clustered, aes(x = flipper_length_standardized, y = bill
 
 base <- ggplot(clus1) +
   geom_point(aes(y = bill_length_standardized, x = flipper_length_standardized),
-  col = "dodgerblue3") +
+  col = "steelblue") +
   labs(x = "Flipper Length (standardized)", y = "Bill Length (standardized)") +
   xlim(c(
     min(clus1$flipper_length_standardized) - 0.25 *
@@ -338,7 +338,7 @@ base <- ggplot(clus1) +
                shape = 21,
                stroke = 1,
                color = "black",
-               fill = "dodgerblue3")+
+               fill = "steelblue")+
   theme(legend.position = "none")
 
 base
@@ -380,12 +380,12 @@ base <- base +
                shape = 21,
                stroke = 1,
                color = "black",
-               fill = "dodgerblue3")
+               fill = "steelblue")
 
 base <- base +
   geom_point(aes(y = bill_length_standardized,
                  x = flipper_length_standardized),
-             col = "dodgerblue3") +
+             col = "steelblue") +
   labs(x = "Flipper Length (standardized)", y = "Bill Length (standardized)") +
   theme(legend.position = "none")
 
@@ -440,17 +440,17 @@ all_clusters_base <- all_clusters_base +
              color = cluster)) +
   xlab("Flipper Length (standardized)") +
   ylab("Bill Length (standardized)") +
-  scale_color_manual(values= c("darkorange3",
-                               "dodgerblue3",
+  scale_color_manual(values= c("darkorange",
+                               "steelblue",
                                "goldenrod1"))
 
 all_clusters_base <- all_clusters_base +
   geom_point(aes(y = cluster_centers$y[1],
                  x = cluster_centers$x[1]),
-             color = "black", fill = "darkorange3", size = 4, stroke = 1, shape = 21) +
+             color = "black", fill = "darkorange", size = 4, stroke = 1, shape = 21) +
   geom_point(aes(y = cluster_centers$y[2],
                  x = cluster_centers$x[2]),
-             color = "black", fill = "dodgerblue3", size = 4, stroke = 1, shape = 21) +
+             color = "black", fill = "steelblue", size = 4, stroke = 1, shape = 21) +
   geom_point(aes(y = cluster_centers$y[3],
                  x = cluster_centers$x[3]),
              color = "black", fill = "goldenrod1", size = 4, stroke = 1, shape = 21)
@@ -1015,8 +1015,8 @@ cluster_plot <- ggplot(clustered_data,
   labs(x = "Flipper Length",
        y = "Bill Length",
        color = "Cluster") +
-  scale_color_manual(values = c("dodgerblue3",
-                                "darkorange3",
+  scale_color_manual(values = c("steelblue",
+                                "darkorange",
                                 "goldenrod1")) +
   theme(text = element_text(size = 12))
 
